[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -331,9 +331,15 @@ identity.identified.state_and_country=%S, %S
 
 identity.unknown.tooltip=Chan eil an làrach seo a' nochdadh fiosrachadh dearbh-aithne.
 
+trackingProtection.intro.title=Mar a dh’obraicheas dìon o thracadh
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Nuair a chì thu an sgiath, tha sin a’ ciallachadh gu bheil Firefox a’ bacadh susbaint a nì tracadh ort.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
+trackingProtection.intro.step1of3=1 à 3
+trackingProtection.intro.nextButton.label=Air adhart
 
+trackingProtection.icon.activeTooltip=Chaidh oidhirpean tracaidh a bhacadh
+trackingProtection.icon.disabledTooltip=Mhothaich sinn do shusbaint a nì tracadh
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Chaidh comharra-lìn a chruthachadh
@@ -552,7 +558,10 @@ getUserMedia.shareCamera.message = A bheil thu airson an camara agad a cho-roinn
 getUserMedia.shareMicrophone.message = A bheil thu airson am micreofon agad a cho-roinneadh le %S?
 getUserMedia.shareScreen.message = A bheil thu airson an sgrìn agad a cho-roinneadh le %S?
 getUserMedia.shareCameraAndMicrophone.message = A bheil thu airson am micreofon 's an camara agad a cho-roinneadh le %S?
+getUserMedia.shareCameraAndAudioCapture.message = A bheil thu airson an camara agad agus fuaim an taba seo a cho-roinneadh le %S?
 getUserMedia.shareScreenAndMicrophone.message = A bheil thu airson am micreofon is sgrìn agad a cho-roinneadh le %S?
+getUserMedia.shareScreenAndAudioCapture.message = A bheil thu airson fuaim an taba seo agus an sgrìn agad a cho-roinneadh le %S?
+getUserMedia.shareAudioCapture.message = A bheil thu airson fuaim an taba seo a cho-roinneadh le %S?
 getUserMedia.selectWindow.label=An uinneag a tha gus co-roinneadh:
 getUserMedia.selectWindow.accesskey=u
 getUserMedia.selectScreen.label=An sgrìn a tha gus co-roinneadh:
@@ -594,6 +603,7 @@ getUserMedia.sharingApplication.message = Tha thu a' co-roinneadh aplacaid leis 
 getUserMedia.sharingScreen.message = Tha thu a' co-roinneadh na sgrìn agad leis an duilleag seo an-dràsta.
 getUserMedia.sharingWindow.message = Tha thu a' co-roinneadh uinneag leis an duilleag seo an-dràsta.
 getUserMedia.sharingBrowser.message = Tha thu a’ co-roinneadh taba leis an duilleag seo an-dràsta.
+getUserMedia.sharingAudioCapture.message = Tha thu a’ co-roinneadh fuaim aig taba leis an duilleag seo.
 getUserMedia.continueSharing.label = Lean air a' cho-roinneadh
 getUserMedia.continueSharing.accesskey = c
 getUserMedia.stopSharing.label = Sguir dhen cho-roinneadh
@@ -633,6 +643,7 @@ getUserMedia.sharingMenu.accesskey = b
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (camara)
 getUserMedia.sharingMenuMicrophone = %S (micreofon)
+getUserMedia.sharingMenuAudioCapture = %S (fuaim aig taba)
 getUserMedia.sharingMenuApplication = %S (aplacaid)
 getUserMedia.sharingMenuScreen = %S (sgrìn)
 getUserMedia.sharingMenuWindow = %S (uinneag)
@@ -642,6 +653,11 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camara, micreofon is a
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camara, micreofon is sgrìn)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camara, micreofon is uinneag)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (camara, micreofon is taba)
+getUserMedia.sharingMenuCameraAudioCapture = %S (camara ’s fuaim aig taba)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (camara, fuaim aig taba ’s aplacaid)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (camara, fuaim aig taba agus sgrìn)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (camara, fuaim aig taba ’s uinneag)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (camara, fuaim aig taba agus taba)
 getUserMedia.sharingMenuCameraApplication = %S (an camara is an aplacaid)
 getUserMedia.sharingMenuCameraScreen = %S (an camara is an sgrìn)
 getUserMedia.sharingMenuCameraWindow = %S (an camara 's an uinneag)
@@ -650,6 +666,10 @@ getUserMedia.sharingMenuMicrophoneApplication = %S (micreofon is aplacaid)
 getUserMedia.sharingMenuMicrophoneScreen = %S (micreofon is sgrìn)
 getUserMedia.sharingMenuMicrophoneWindow = %S (micreofon is uinneag)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (micreofon is taba)
+getUserMedia.sharingMenuAudioCaptureApplication = %S (fuaim aig taba ’s aplacaid)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (fuaim aig taba agus sgrìn)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (fuaim aig taba ’s uinneag)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (fuaim aig taba agus taba)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Chan eil fhios cò às a thàinig e
