--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -55,11 +55,15 @@ problem_accessing_account=Bha duilgheas a' faighinn cothrom air a' chunntas agad
 ## the appropriate action.
 retry_button=Feuch ris a-rithist
 
+share_email_subject6=Thig a bhruidhinn rium ann an còmhradh video
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Briog air ceangal Firefox Hello gus a dhol an sàs sa chòmhradh an-dràsta: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Thig a bhruidhinn rium ann an còmhradh video. Briog air ceangal Firefox Hello gus ceangal a dhèanamh an-dràsta: {{callUrl}}/n/nBruidhneamaid air na leanas ann: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=________Cruthaich còmhraidhean video an-asgaidh no gabh pàirt annta le Firefox Hello. Dèan ceangal gun duilgheadas slighe video le duine sam bith, àite sam bith. Chan eil feum sam bith air clàradh no dad a luchdadh a-nuas. Gheibh thu barrachd fiosrachaidh air http://www.firefox.com/hello
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -126,8 +130,10 @@ import_contacts_success_message=Chaidh an luchd-aithne ion-phortadh ({{total}}).
 sync_contacts_button=Sioncronaich an luchd-aithne
 ## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading=Chan eil luchd-aithne agad fhathast
 ## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add=Cuir ris no ion-phortaich feadhainn
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -140,14 +146,17 @@ import_failed_support_button=Cobhair
 remove_contact_menu_button2=Thoir air falbh an neach-aithne…
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Thoir air falbh an neach-aithne
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=A bheil thu cinnteach gu bheil thu airson an neach-aithne seo a sguabadh às?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Thoir air falbh an neach-aithne
 confirm_delete_contact_cancel_button=Sguir dheth
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=AN LUCHD-AITHNE AGAM
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -208,6 +217,7 @@ active_screenshare_button_title=Sguir dhen cho-roinneadh
 inactive_screenshare_button_title=Co-roinn an sgrìn
 share_tabs_button_title2=Co-roinn na tabaichean agad
 share_windows_button_title=Co-roinn uinneagan eile
+self_view_hidden_message=Tha do dhealbh fhèin am falach ach ’ga chur fhathast; atharraich meud na h-uinneige gus a shealltainn
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
