--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,7 @@ loop-call-button3.label = Hello
 loop-call-button3.tooltiptext = Tòisich air còmhradh
 # LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
 # placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
+loop-call-button3-pb.tooltiptext = Chan eil %S ri làimh ann am modh brabhsaidh phrìobhaidich.
 
 social-share-button.label = Co-roinn an duilleag seo
 social-share-button.tooltiptext = Co-roinn an duilleag seo
