--- a/browser/chrome/browser/newTab.properties
+++ b/browser/chrome/browser/newTab.properties
@@ -34,9 +34,11 @@ newtab.suggested.explain=’S e Mozilla a tha a’ moladh dhut na làraich seo. 
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
 newtab.enhanced.explain=Leasaich com-pàirtiche aig Mozilla an leacag seo 's chuir e an àite a' ghlacaidh-sgrìn e. 'S urrainn dhut na leacagan leasaichte a chur dheth 's tu a' briogadh air a' phutan "%1$S" a dh'fhosglas na roghainnean dhut. %2$S
+newtab.intro1.paragraph1=Nuair a dh’fhosglas tu taba ùr a-nis, chì thu na mholas sinn de làraichean inntinneach dhut. Tha cuid dhiubh ’gam moladh le Mozilla no air sponsaireachd nan com-pàirtichean againn.
 # LOCALIZATION NOTE(newtab.intro1.paragraph2): %1$S will be replaced inline by
 # an active link using string newtab.privacy.link as text. %2$S will be replaced
 # inline by the gear icon used to customize the new tab window.
+newtab.intro1.paragraph2=Gus an t-seirbheis seo a sholar, tha cuid a dhàta ’ga chur air ais thugainn a-rèir %1$S againn. ’S urrainn dhut seo a chur dheth ma bheir thu air falbh a’ chromag aig an roghainn seo fo ìomghaigheag a’ ghèar (%2$S).
 newtab.learn.link=Barrachd fiosrachaidh…
 newtab.privacy.link=Sanas prìobhaideachd
 newtab.learn.link2=Barrachd mu thabaichean ùra
