--- a/browser/chrome/browser/tabbrowser.properties
+++ b/browser/chrome/browser/tabbrowser.properties
@@ -30,7 +30,10 @@ tabs.closeWarningMultiple=;Tha thu gu bhith a' dùnadh #1 taba. A bheil thu cinn
 tabs.closeButtonMultiple=Dùin na tabaichean
 tabs.closeWarningPromptMe=Thoir rabhadh dhomh mus dùin mi iomadh taba còmhla
 
+tabs.closeTab.tooltip=Dùin an taba
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
+tabs.muteAudio.tooltip=Mùch fuaim an taba (%S)
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
 # %S is the keyboard shortcut for "Unmute tab"
+tabs.unmuteAudio.tooltip=Till fuaim an taba (%S)
