--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -70,6 +70,7 @@ pageInfo_Privacy_Encrypted1=Chaidh an duilleag a tha thu a' coimhead air a chrio
 pageInfo_Privacy_Encrypted2=Bidh e doirbh do dhaoine gun ùghdarras fiosrachadh a tha a' siubhal eadar coimpiutairean fhaicinn ma chaidh a chrioptachadh. Mar sin, chan eil coltas gun leugh duine sam bith an duilleag seo 's e a' siubhal an lìonraidh.
 pageInfo_MixedContent=Ceangal air a chrioptachadh gu ìre
 pageInfo_MixedContent2=Cha deach cuid dhen duilleag a tha thu a' coimhead air a chrioptachadh mus deach a chur a-nall thairis air an lìon.
+pageInfo_WeakCipher=Tha an ceangal agad ris an làrach seo a’ cleachdadh crioptachadh lag is chan eil e prìobhaideachd. Chì daoine eile am fiosrachadh agad agus is urrainn dhaibh giùlan na làraich-lìn atharrachadh.
 
 #Cert Viewer
 certDetails=Sealladair teisteanais:
