--- a/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -6,6 +6,14 @@ rememberValue = Cleachd manaidsear nam faclan-faire gus an luach seo a chumail a
 rememberPassword = Cleachd manaidsear nam faclan-faire gus am facal-faire seo a chumail ann an cuimhne.
 savePasswordTitle = Dearbhaich
 # LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
+rememberLoginMsg = A bheil thu airson ’s gun cum %S an clàradh a-steach seo ’na chuimhne dhut?
+rememberLoginMsgNoUser = A bheil thu airson ’s gun cum %S am facal-faire seo ’na chuimhne dhut?
+rememberLoginButtonText = Cum an cuimhne
+rememberLoginButtonAccessKey = R
+updateLoginMsg = A bheil thu airson an clàradh seo ùrachadh?
+updateLoginMsgNoUser = A bheil thu airson am facal-faire seo ùrachadh?
+updateLoginButtonText = Ùraich
+updateLoginButtonAccessKey = U
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -15,6 +23,7 @@ rememberPasswordMsg = A bheil thu ag iarraidh am facal-faire airson "%1$S" a chu
 rememberPasswordMsgNoUsername = A bheil thu airson am facal-faire a chumail an cuimhne air %S?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=Gun ainm-cleachdaiche
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -27,12 +36,14 @@ notifyBarNeverRememberButtonText = Na cuimhnich am facal-faire airson na làraic
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Cum an cuimhne
 notifyBarRememberPasswordButtonText = Cuimhnich am facal-faire
+notifyBarRememberPasswordButtonAccessKey = R
 passwordChangeTitle = Dearbhaich atharrachadh an fhacail-fhaire
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = A bheil thu airson am facal-faire a chaidh a shàbhaladh airson %S ùrachadh?
 updatePasswordMsgNoUser = A bheil thu airson am facal-faire a chaidh a shàbhaladh ùrachadh?
 notifyBarUpdateButtonText = Ùraich am facal-faire
+notifyBarUpdateButtonAccessKey = U
 notifyBarDontChangeButtonText = Na atharraich
 notifyBarDontChangeButtonAccessKey = D
 userSelectText = Dearbhaich cò an cleachdaiche a tha thu ag atharrachadh an fhacail-fhaire air a shon
@@ -43,6 +54,8 @@ showPasswordsAccessKey=P
 noMasterPasswordPrompt=A bheil thu cinnteach gu bheil thu airson na faclan-faire agad a shealltainn?
 removeAllPasswordsPrompt=A bheil thu airson gach facal-faire a thoirt air falbh?
 removeAllPasswordsTitle=Thoir air falbh a h-uile facal-faire
+removeLoginPrompt=A bheil thu cinnteach gu bheil thu airson a clàradh seo a thoirt air falbh?
+removeLoginTitle=Thoir an clàradh air falbh
 loginsSpielAll=Tha faclan-faire air a stòradh air a' choimpiutair agad airson nan làraichean a leanas:
 loginsSpielFiltered=Tha na faclan-faire a leanas a' freagairt ris an lorg agad:
 # LOCALIZATION NOTE (loginHostAge):
@@ -51,3 +64,6 @@ loginsSpielFiltered=Tha na faclan-faire a leanas a' freagairt ris an lorg agad:
 loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
+noUsername=Gun ainm-cleachdaiche
+duplicateLoginTitle=Tha an clàradh seo ann mu thràth
+duplicateLogin=Tha an clàradh seo ann mu thràth.
