[gd] update from Pootle (mobile)

--- a/mobile/android/chrome/aboutLogins.properties
+++ b/mobile/android/chrome/aboutLogins.properties
@@ -5,6 +5,7 @@
 loginsMenu.showPassword=Seall am facal-faire
 loginsMenu.copyPassword=Dèan lethbhreac dhen fhacal-fhaire
 loginsMenu.copyUsername=Dèan lethbhreac dhen ainm-chleachdaiche
+loginsMenu.editLogin=Deasaich an clàradh a-steach
 loginsMenu.delete=Sguab às
 
 loginsDialog.confirmDelete=A bheil thu airson an clàradh a-steach seo a sguabadh às?
@@ -12,8 +13,12 @@ loginsDialog.copy=Dèan lethbhreac
 loginsDialog.confirm=Ceart ma-tha
 loginsDialog.cancel=Sguir dheth
 
+
 loginsDetails.age=Aois: %S là(ithean)
 
 loginsDetails.copyFailed=Dh’fhàillig an lethbhreac
 loginsDetails.passwordCopied=Chaidh lethbhreac a dhèanamh dhen fhacal-fhaire
 loginsDetails.usernameCopied=Chaidh lethbhreac a dhèanamh dhen ainm-chleachdaiche
+
+password-btn.show=Seall
+password-btn.hide=Falaich
