--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -317,12 +317,22 @@ masterPassword.incorrect=Facal-faire cearr
 # LOCALIZATION NOTE (remoteIncomingPromptTitle): The title displayed on the
 # dialog that prompts the user to allow the incoming connection.
 remoteIncomingPromptTitle=Ceangal a' tighinn a-steach
-# LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
-# dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptMessage=Fhuair sinn iarrtas a dh’iarr cead airson dì-bhugachadh cèin. B’ urrainn do chliant cèin làn-smachd fhaighinn air a’ bhrabhsair agad. A bheil thu airson seo a cheadachadh?
-remoteIncomingPromptDisable=Cuir à comas
-remoteIncomingPromptAccept=Ceart ma-thà
-remoteIncomingPromptCancel=Sguir dheth
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming USB connection.
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming TCP connection.
+# LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
+# code scanner to authenticate an incoming remote debugger connection.  The
+# connection will be allowed assuming the scan succeeds.
+# LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
+# start a QR code scanner to authenticate an incoming remote debugger
+# connection.  The connection will be allowed assuming the scan succeeds, and
+# the other endpoint's certificate will be saved to skip future scans for this
+# client.
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 remoteNotificationTitle=Tha dì-bhugachadh %S an comas
@@ -381,7 +391,6 @@ readerMode.toolbarTip=Thoir gnogag air an sgrìn airson roghainnean an leughadai
 
 #Open in App
 openInApp.pageAction = Fosgail san aplacaid
-openInApp.ok = Ceart ma-tha
 openInApp.cancel = Sguir dheth
 
 #Tab sharing
