[gd] update from Pootle (mobile)

--- a/mobile/android/chrome/aboutLogins.properties
+++ b/mobile/android/chrome/aboutLogins.properties
@@ -13,6 +13,9 @@ loginsDialog.copy=Dèan lethbhreac
 loginsDialog.confirm=Ceart ma-tha
 loginsDialog.cancel=Sguir dheth
 
+editLogin.fallbackTitle=Deasaich an clàradh a-steach
+editLogin.saved1=Clàradh a-steach a chaidh a shàbhaladh
+editLogin.couldNotSave=Cha b’ urrainn dhuinn na h-atharraichean a shàbhaladh
 
 loginsDetails.age=Aois: %S là(ithean)
 
