--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -112,7 +112,7 @@ geolocation.dontAllow=Na co-roinn
 geolocation.ask=A bheil thu airson d' ionad a nochdadh dha %S?
 # LOCALIZATION NOTE (geolocation.shareLocation): Label that will be used in
 # site settings dialog.
-geolocation.shareLocation=Nochd d' àite
+geolocation.shareLocation=Nochd d’ ionad
 # LOCALIZATION NOTE (geolocation.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 geolocation.dontAskAgain=Na faighnich dhìom a-rithist airson na làraich seo
@@ -319,20 +319,26 @@ masterPassword.incorrect=Facal-faire cearr
 remoteIncomingPromptTitle=Ceangal a' tighinn a-steach
 # LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
 # dialog that prompts the user to allow an incoming USB connection.
+remoteIncomingPromptUSB=A bheil thu airson ceangal dì-bhugachaidh USB a cheadachadh?
 # LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
 # dialog that prompts the user to allow an incoming TCP connection.
+remoteIncomingPromptTCP=A bheil thu airson ceangal dì-bhugachaidh o %1$S:%2$S a cheadachadh? Airson ceangal mar seo, feumaidh tu còd QR a sganadh gus teisteanas an uidheim chèin a dhearbhadh. Ma chuimhnicheas tu an t-uidheam, cha bhi agad ri seo a dhèanamh a-rithist.
 # LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
 # an incoming remote debugger connection.
+remoteIncomingPromptDeny=Diùlt
 # LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
 # an incoming remote debugger connection.
+remoteIncomingPromptAllow=Ceadaich
 # LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
 # code scanner to authenticate an incoming remote debugger connection.  The
 # connection will be allowed assuming the scan succeeds.
+remoteIncomingPromptScan=Sganaich
 # LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
 # start a QR code scanner to authenticate an incoming remote debugger
 # connection.  The connection will be allowed assuming the scan succeeds, and
 # the other endpoint's certificate will be saved to skip future scans for this
 # client.
+remoteIncomingPromptScanAndRemember=Sganaich is cuimhnich
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 remoteNotificationTitle=Tha dì-bhugachadh %S an comas
@@ -391,6 +397,7 @@ readerMode.toolbarTip=Thoir gnogag air an sgrìn airson roghainnean an leughadai
 
 #Open in App
 openInApp.pageAction = Fosgail san aplacaid
+openInApp.ok = Ceart ma-thà
 openInApp.cancel = Sguir dheth
 
 #Tab sharing
