[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/accounts.properties
+++ b/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = A
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Ath-cheangail %S
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Dìochuimhnich
 forgetMigration.accessKey = D
 
@@ -43,6 +45,7 @@ verificationSentTitle = Chaidh an dearbhadh a chur
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Chaidh ceangal dearbhaidh a chur gu %S
 verificationSentDescription = Thoir sùil air a' phost-d agad is briog air a' cheangal gus tòiseachadh air an t-sioncronachadh.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Chan urrainn dhuinn an dearbhadh a chur
 verificationNotSentHeading = Chan urrainn dhuinn post-d dearbhaidh a chur an-dràsta fhèin
