--- a/browser/chrome/browser/devtools/markers.properties
+++ b/browser/chrome/browser/devtools/markers.properties
@@ -22,7 +22,7 @@ marker.label.parseHTML=Parse HTML
 marker.label.parseXML=Parse XML
 marker.label.domevent=DOM Event
 marker.label.consoleTime=Console
-marker.label.garbageCollection=GC ceum air cheum
+marker.label.garbageCollection.incremental=GC ceum air cheum
 marker.label.garbageCollection.nonIncremental=Non-incremental GC
 marker.label.cycleCollection=Cycle Collection
 marker.label.cycleCollection.forgetSkippable=CC Graph Reduction
