--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -25,10 +25,9 @@ sign_in_again_button=Clàraich a-steach
 ## will be replaced by the super short brandname.
 sign_in_again_use_as_guest_button2=Cleachd {{clientSuperShortname}} mar aoigh
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Gabh pàirt sa chòmhradh
 first_time_experience_button_label=Dèan toiseach-tòiseachaidh
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Thoir cuireadh do chuideigin a thighinn an-seo.
 
@@ -86,25 +85,23 @@ settings_menu_button_tooltip=Roghainnean
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Lorg…
+contacts_search_placesholder2=Lorg…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Neach-aithne ùr
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Ainm
-new_contact_email_placeholder=Post-d
-new_contact_fxos_phone_placeholder=Fòn Firefox OS
-new_contact_phone_placeholder2=Fòn
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Fòn Firefox OS
+contact_form_phone_placeholder2=Fòn
 
 contacts_blocked_contacts=Luchd-aithne bacte
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Cuir neach-aithne ris
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -128,12 +125,16 @@ import_contacts_success_message=Chaidh an luchd-aithne ion-phortadh ({{total}}).
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Sioncronaich an luchd-aithne
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-no_contacts_message_heading=Chan eil luchd-aithne agad fhathast
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
-no_contacts_import_or_add=Cuir ris no ion-phortaich feadhainn
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -180,7 +181,6 @@ edit_contact_email_label=Post-d
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Deiseil
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -194,8 +194,6 @@ video_call_menu_button=Còmhradh video
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message='S urrainn dhut ìomhaigheagan phròifilean a chur ris an luchd-aithne agad gu fèin-obrachail 's tu a' nochdadh an cuid phost-d dha Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Barrachd fiosrachaidh
-gravatars_promo_button_nothanks=Na ùraich, mòran taing
-gravatars_promo_button_use=Cleachd ìomhaigheagan phròifilean
 
 # Conversation Window Strings
 
@@ -211,8 +209,6 @@ hangup_button_title=Cuir sìos am fòn
 hangup_button_caption2=Fàg an-seo
 mute_local_audio_button_title=Mùch an fhuaim agad
 unmute_local_audio_button_title=Till an fhuaim agad
-mute_local_video_button_title=Mùch a' video agad
-unmute_local_video_button_title=Till a' video agad
 active_screenshare_button_title=Sguir dhen cho-roinneadh
 inactive_screenshare_button_title=Co-roinn an sgrìn
 share_tabs_button_title2=Co-roinn na tabaichean agad
@@ -250,7 +246,6 @@ restart_call=Rach an sàs a-rithist
 contact_unavailable_title=Chan eil {{contactName}} an làthair.
 generic_contact_unavailable_title=Chan eil an neach seo an làthair.
 
-generic_failure_title=Chaidh rudeigin cearr.
 generic_failure_with_reason2='S urrainn dhut feuchainn ris a-rithist no ceangal a chur ann am post-d airson dèiligeadh ris as a dhèidh seo.
 generic_failure_no_reason2=A bheil thu airson feuchainn ris a-rithist?
 
@@ -303,24 +298,17 @@ tour_label=Turas
 rooms_default_room_name_template=Còmhradh {{conversationLabel}}
 rooms_leave_button_label=Fàg
 rooms_list_copy_url_tooltip=Dèan lethbhreac dhen cheangal
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations={{num}} chòmhradh an-dràsta;{{num}} chòmhradh an-dràsta;{{num}} còmhraidhean an-dràsta;{{num}} còmhradh an-dràsta
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Sguab às an còmhradh
 rooms_list_deleteConfirmation_label=A bheil thu cinnteach?
-rooms_list_no_current_conversations=Chan eil còmhradh agad aig an àm seo
 rooms_change_failed_label=Cha ghabh an còmhradh ùrachadh
 rooms_new_room_button_label=Tòisich air còmhradh
-rooms_only_occupant_label=Tha thusa air thoiseach chàich.
 rooms_panel_title=Tagh còmhradh no tòisich air fear ùr
 rooms_room_full_label=Tha dithis sa chòmhradh seo mu thràth.
 rooms_room_full_call_to_action_nonFx_label=Luchdaich a-nuas {{brandShortname}} airson fear a thòiseachadh thu fhèin
 rooms_room_full_call_to_action_label=Barrachd fiosrachaidh air {{clientShortname}} »
 rooms_room_joined_label=Tha cuideigin ùr sa chòmhradh a-nis!
-rooms_room_join_label=Gabh pàirt sa chòmhradh
 rooms_signout_alert=Thèid gach còmhradh fosgailte a dhùnadh
 
 # Infobar strings
@@ -333,12 +321,14 @@ infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
-context_inroom_label=Bruidhneamaid mu dhèidhinn:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -346,12 +336,12 @@ context_edit_activate_label=Bruidhinn mu dhèidhinn “{{title}}”
 context_edit_name_placeholder=Ainm a’ chòmhraidh
 context_edit_comments_placeholder=Beachdan
 context_add_some_label=Cuir co-theacsa ris
-context_edit_tooltip=Deasaich an co-theacsa
-context_hide_tooltip=Falaich an co-theacsa
 context_show_tooltip=Seall an co-theacsa
-context_save_label2=Sàbhail
 context_link_modified=Chaidh an ceangal seo atharrachadh.
 context_learn_more_link_label=Barrachd fiosrachaidh.
+conversation_settings_menu_edit_context=Deasaich an co-theacsa
+conversation_settings_menu_hide_context=Falaich an co-theacsa
+
 
 # Text chat strings
 
