--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -27,7 +27,7 @@ STSMultipleIncludeSubdomains=Strict-Transport-Security: The site specified a hea
 STSInvalidIncludeSubdomains=Strict-Transport-Security: The site specified a header that included an invalid 'includeSubDomains' directive.
 STSCouldNotSaveState=Strict-Transport-Security: An error occurred noting the site as a Strict-Transport-Security host.
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 PKPUnknownError=Public-Key-Pins: An unknown error occurred processing the header specified by the site.
 PKPUntrustworthyConnection=Public-Key-Pins: The connection to the site is untrustworthy, so the specified header was ignored.
 PKPCouldNotParseHeader=Public-Key-Pins: The site specified a header that could not be parsed successfully.
@@ -53,7 +53,14 @@ LoadingMixedDisplayContent2=A' luchdadh susbaint taisbeanaidh mheasgaichte (neo-
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and allow-same-origin for its sandbox attribute can remove its sandboxing.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Tha an làrach seo a' cleachdadh a' phròtacail SSL 3.0 airson crioptachadh nach eil tèarainte tuilleadh 's nach molar tuilleadh.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Tha an làrach seo a' cleachdadh na sifire RC4 airson crioptachadh nach eil tèarainte tuilleadh 's nach molar tuilleadh.
