--- a/services/sync/sync.properties
+++ b/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %2$S aig %1$S air %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = An sioncronachadh mu dheireadh: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Comharran-lìn fòn-làimhe
 
 remote.pending.label = Tha na tabaichean cèin 'gan sioncronachadh…
