--- a/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/toolkit/chrome/global/devtools/styleinspector.properties
@@ -64,6 +64,10 @@ helpLinkTitle=Leugh an treòrachadh airson na buaidh seo
 # the title attribute of the warning icon.
 rule.warning.title=Luach mì-dhligheach a' bhuaidh
 
+# LOCALIZATION NOTE (rule.filterProperty.title): Text displayed in the tooltip
+# of the search button that is shown next to a property that has been overridden
+# in the rule view.
+
 # LOCALIZATION NOTE (ruleView.empty): Text displayed when the highlighter is
 # first opened and there's no node selected in the rule view.
 rule.empty=Cha deach eileamaid a thaghadh.
