[gd] update from Pootle (thunderbird)

--- a/editor/ui/chrome/composer/editor.properties
+++ b/editor/ui/chrome/composer/editor.properties
@@ -88,6 +88,7 @@ LinkText=Teacsa a' cheangail
 LinkImage=Dealbh a' cheangail
 MixedSelection=[Taghadh measgaichte]
 Mixed=(measgaichte)
+# LOCALIZATION NOTE (NotInstalled): %S is the name of the font
 EnterLinkText=Cuir a-steach an teacsa a chithear sa cheangal:
 EnterLinkTextAccessKey=T
 EmptyLinkTextError=Cuir a-steach teacsa airson a' cheangail seo.
