--- a/browser/chrome/browser/accounts.properties
+++ b/browser/chrome/browser/accounts.properties
@@ -28,6 +28,7 @@ resendVerificationEmail.accessKey = A
 reconnectDescription = Ath-cheangail %S
 
 # LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+verifyDescription = Dearbh %S
 
 forgetMigration.label = Dìochuimhnich
 forgetMigration.accessKey = D
@@ -46,7 +47,9 @@ verificationSentTitle = Chaidh an dearbhadh a chur
 verificationSentHeading = Chaidh ceangal dearbhaidh a chur gu %S
 verificationSentDescription = Thoir sùil air a' phost-d agad is briog air a' cheangal gus tòiseachadh air an t-sioncronachadh.
 # LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
+verificationSentFull = Chaidh ceangal dearbhaidh a chur gu %S. Thoir sùil air a’ phost-d agad is briog air a’ cheangal gus tòiseachadh air an t-sioncronachadh.
 
 verificationNotSentTitle = Chan urrainn dhuinn an dearbhadh a chur
 verificationNotSentHeading = Chan urrainn dhuinn post-d dearbhaidh a chur an-dràsta fhèin
 verificationNotSentDescription = Feuch ris a-rithist an ceann greis.
+verificationNotSentFull = Chan urrainn dhuinn post-d dearbhaidh a chur an-dràsta fhèin, feuch ris a-rithist às a dhèidh seo.
