--- a/dom/chrome/xslt/xslt.properties
+++ b/dom/chrome/xslt/xslt.properties
@@ -33,6 +33,7 @@
 29 = Cromag dhualach neo-chothromaichte.
 30 = A' cruthachadh eileamaid le QName mì-dhligheach.
 31 = Tha ceangal caochladair a' sgàileadh ceangal caochladair am broinn na dearbh theamplaid.
+32 = Call to the key function not allowed.
 
 LoadingError = Mearachd rè luchdadh na duilleige-stoidhle: %S
 TransformError = Mearachd rè cruth-atharrachadh XSLT: %S
