--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -28,8 +28,18 @@ sign_in_again_use_as_guest_button2=Cleachd {{clientSuperShortname}} mar aoigh
 first_time_experience_button_label=Dèan toiseach-tòiseachaidh
 ## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
 ## user to create his or her first conversation.
+first_time_experience_subheading=Gabh pàirt sa chòmhradh
 
 invite_header_text=Thoir cuireadh do chuideigin a thighinn an-seo.
+invite_header_text2=Thoir cuireadh do charaid an-seo
+invite_facebook_button=co-roinn air Facebook
+invite_facebook_triggered=air a cho-roinneadh!
+invite_contacts_button=Co-roinn leis an luchd-aithne
+invite_contacts_triggered=air a cho-roinneadh!
+invite_copy_button=dèan lethbhreac dhen cheangal
+invite_copy_triggered=lethbhreac air a dhèanamh!
+invite_email_button=cuir an ceangal air a’ phost-d
+invite_email_triggered=air a chur slighe puist-d!
 
 # Status text
 display_name_guest=Aoigh
@@ -89,9 +99,12 @@ contacts_search_placesholder2=Lorg…
 
 ## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
+new_contact_button2=Cuir neach-aithne ùr ris
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_name_placeholder=Ainm
+contact_form_email_placeholder=Post-d
 contact_form_fxos_phone_placeholder=Fòn Firefox OS
 contact_form_phone_placeholder2=Fòn
 
@@ -100,8 +113,10 @@ contacts_blocked_contacts=Luchd-aithne bacte
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
+add_contact_button=Cuir neach-aithne ris
 ## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
 ## panel. It is displayed when Add Contact is selected.
+add_contact_title=Cuir neach-aithne ris
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -127,14 +142,19 @@ import_contacts_success_message=Chaidh an luchd-aithne ion-phortadh ({{total}}).
 sync_contacts_button=Sioncronaich an luchd-aithne
 ## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading2=Chan eil luchd-aithne agad fhathast.
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add2=Cuir cuideigin ris!
 ## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
 ## has no conversations available.
+no_conversations_message_heading2=Chan eil còmhradh agad fhathast.
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
+no_conversations_start_message2=Tòisich air fear ùr!
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
 ## search returned no matching results.
+contacts_no_search_results=Cha robh toradh a’ freagairt ris.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -181,6 +201,7 @@ edit_contact_email_label=Post-d
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
+edit_contact_done_button=Deiseil
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -194,6 +215,7 @@ video_call_menu_button=Còmhradh video
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message='S urrainn dhut ìomhaigheagan phròifilean a chur ris an luchd-aithne agad gu fèin-obrachail 's tu a' nochdadh an cuid phost-d dha Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Barrachd fiosrachaidh
+gravatars_promo_button_use2=Cleachd ìomhaigheagan phròifilean
 
 # Conversation Window Strings
 
@@ -209,6 +231,8 @@ hangup_button_title=Cuir sìos am fòn
 hangup_button_caption2=Fàg an-seo
 mute_local_audio_button_title=Mùch an fhuaim agad
 unmute_local_audio_button_title=Till an fhuaim agad
+mute_local_video_button_title2=Cuir a’ video à comas
+unmute_local_video_button_title2=Cuir a’ video an comas
 active_screenshare_button_title=Sguir dhen cho-roinneadh
 inactive_screenshare_button_title=Co-roinn an sgrìn
 share_tabs_button_title2=Co-roinn na tabaichean agad
@@ -246,6 +270,7 @@ restart_call=Rach an sàs a-rithist
 contact_unavailable_title=Chan eil {{contactName}} an làthair.
 generic_contact_unavailable_title=Chan eil an neach seo an làthair.
 
+generic_failure_message=Tha duilgheadasan teicnigeach againn…
 generic_failure_with_reason2='S urrainn dhut feuchainn ris a-rithist no ceangal a chur ann am post-d airson dèiligeadh ris as a dhèidh seo.
 generic_failure_no_reason2=A bheil thu airson feuchainn ris a-rithist?
 
@@ -261,6 +286,7 @@ call_timeout_notification_text=Cha do ràinig do ghairm an taobh thall.
 retry_call_button=Feuch ris a-rithist
 email_link_button=Cuir an ceangal air a’ phost-d
 cancel_button=Sguir dheth
+rejoin_button=Rach an sàs sa chòmradh a-rithist
 
 cannot_start_call_session_not_ready=Chan urrainn dhuinn a' ghairm a thòiseachadh, chan eil an seisean deiseil.
 network_disconnected=Bhris an ceangal ris an lìonra gu h-obann.
@@ -300,6 +326,7 @@ rooms_leave_button_label=Fàg
 rooms_list_copy_url_tooltip=Dèan lethbhreac dhen cheangal
 ## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
 ## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
+rooms_list_recent_conversations=CÒMHRAIDHEAN O CHIONN GOIRID
 rooms_list_delete_tooltip=Sguab às an còmhradh
 rooms_list_deleteConfirmation_label=A bheil thu cinnteach?
 rooms_change_failed_label=Cha ghabh an còmhradh ùrachadh
@@ -309,6 +336,7 @@ rooms_room_full_label=Tha dithis sa chòmhradh seo mu thràth.
 rooms_room_full_call_to_action_nonFx_label=Luchdaich a-nuas {{brandShortname}} airson fear a thòiseachadh thu fhèin
 rooms_room_full_call_to_action_label=Barrachd fiosrachaidh air {{clientShortname}} »
 rooms_room_joined_label=Tha cuideigin ùr sa chòmhradh a-nis!
+rooms_room_join_label=Gabh pàirt sa chòmhradh
 rooms_signout_alert=Thèid gach còmhradh fosgailte a dhùnadh
 
 # Infobar strings
@@ -324,11 +352,13 @@ infobar_menuitem_dontshowagain_accesskey=D
 # LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
 # conversation window when the user edits context. It is a header to the edit
 # section.
+context_inroom_header=Bruidhneamaid mu dhèidhinn…
 # LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
 # title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label2=Bruidhneamaid mu dhèidhinn:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -337,6 +367,8 @@ context_edit_name_placeholder=Ainm a’ chòmhraidh
 context_edit_comments_placeholder=Beachdan
 context_add_some_label=Cuir co-theacsa ris
 context_show_tooltip=Seall an co-theacsa
+context_cancel_label=Sguir dheth
+context_done_label=Deiseil
 context_link_modified=Chaidh an ceangal seo atharrachadh.
 context_learn_more_link_label=Barrachd fiosrachaidh.
 conversation_settings_menu_edit_context=Deasaich an co-theacsa
