--- a/services/sync/sync.properties
+++ b/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = An sioncronachadh mu dheireadh: %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Clàraich a-steach gun t-sioncronachadh
 
 mobile.label = Comharran-lìn fòn-làimhe
 
